@@ -1253,6 +1253,25 @@ Some variables function as toggles (On/Off).  Unless otherwise noted 0 is Off an
 	</td>
 </tr>
 <tr>
+	<td width="20%" bgcolor="#ddddff">
+		$g_bug_link_tag
+	</td>
+	<td width="80%" bgcolor="#ffffff">
+		If a number follows this tag it will create a link to a bug.
+		<p>
+		eg. for # a link would be #45<br />
+		eg. for bug: a link would be bug:98
+	</td>
+</tr>
+<tr>
+	<td width="20%" bgcolor="#ddddff">
+		$g_show_timer
+	</td>
+	<td width="80%" bgcolor="#ffffff">
+		Time page loads.  Shows at the bottom of the page.
+	</td>
+</tr>
+<tr>
 	<td colspan="2" bgcolor="#eeeeee">
 		&nbsp;
 	</td>
