@@ -77,6 +77,7 @@ Mantis
  * Added priority reporting on the report form for developers.
  * Added project category copy.
  * Added CRYPT_FULL_SALT authentication.
+ * Added page timer.
  * Removed access_min and access threshold concepts from the user and project management.
  * Removed extra "echo" in news archive page.
  * Removed proj_user_delete_page.php.
